# macmagic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
resources/: Info.plist
src/: app.cpp  app.h  arpspoofer.cpp  arpspoofer.h  dhcpclient.cpp  dhcpclient.h  iconprovider.cpp  iconprovider.h  macchanger.cpp  macchanger.h  macgenerator.cpp  macgenerator.h  main.cpp  networkinfo.cpp  networkinfo.h  networkinterface.cpp  networkinterface.h  traymanager.cpp  traymanager.h  wifiinfo.h  wifiinfo.mm
tests/: CMakeLists.txt  test_arpspoofer.cpp  test_dhcpclient.cpp  test_macgenerator.cpp  test_networkinfo.cpp  test_networkinterface.cpp
